add code coverage