@@ -29,6 +29,19 @@
         <angularjs.version>1.6.10</angularjs.version>
     </properties>
 
+    <profiles>
+        <profile>
+               <id>test</id>
+               <properties>
+                   <env>test</env>
+                   <gebEnv>test</gebEnv>
+                   <jacoco.skip>false</jacoco.skip>
+                   <maven.test.skip>false</maven.test.skip>
+                   <skip.unit.tests>false</skip.unit.tests>
+               </properties>
+           </profile>
+    </profiles>
+
     <dependencies>
         <!-- client side webjars -->
         <dependency>
@@ -255,6 +268,45 @@
     <build>
         <plugins>
             <plugin>
+                 <groupId>org.jacoco</groupId>
+                 <artifactId>jacoco-maven-plugin</artifactId>
+                 <version>0.8.4</version>
+                 <executions>
+                     <execution>
+                         <id>default-check</id>
+                         <goals>
+                             <goal>check</goal>
+                         </goals>
+                         <configuration>
+                               <rules>
+                                   <rule>
+                                       <element>PACKAGE</element>
+                                       <limits>
+                                           <limit>
+                                               <counter>LINE</counter>
+                                               <value>COVEREDRATIO</value>
+                                               <minimum>0.50</minimum>
+                                           </limit>
+                                       </limits>
+                                   </rule>
+                               </rules>
+                           </configuration>
+                     </execution>
+                     <execution>
+                         <goals>
+                             <goal>prepare-agent</goal>
+                         </goals>
+                     </execution>
+                     <execution>
+                         <id>generate-code-coverage-report</id>
+                         <phase>test</phase>
+                         <goals>
+                             <goal>report</goal>
+                         </goals>
+                     </execution>
+                 </executions>
+             </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
@@ -325,15 +377,27 @@
             </plugin>
 
             <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Tests.java</include>
-                    </includes>
-                    <argLine>-Xmx512m -XX:MaxPermSize=256m -Dspring.profiles.active=test</argLine>
-                </configuration>
-            </plugin>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <version>2.22.2</version>
+                  <configuration>
+                      <testFailureIgnore>true</testFailureIgnore>
+                      <includes>
+                          <include>**/*Test.java</include>
+                      </includes>
+                      <argLine>@{argLine} -Xmx786m -Dspring.profiles.active=test</argLine>
+                  </configuration>
+              </plugin>
+              <plugin>
+                  <artifactId>maven-failsafe-plugin</artifactId>
+                  <version>2.22.2</version>
+                  <configuration>
+                      <testFailureIgnore>true</testFailureIgnore>
+                      <includes>
+                          <include>**/*ITTests.java</include>
+                      </includes>
+                      <argLine>@{argLine} -Xmx512m -Dspring.profiles.active=it</argLine>
+                  </configuration>
+              </plugin>
         </plugins>
     </build>
 
